<resources>

    <string name="app_name"> Simply Book</string>

    <string name="hint_name">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>

    <string name="hint_login_email">E-mail de login</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="recover_password_going">Enviando&#8230;</string>
    <string name="invalid_login_email">
        E-mail não encontrado em nossa base de dados.
    </string>

    <string name="reunioes">REUNIÕES</string>

    <!-- Login/Cadastro -->
    <string name="title_activity_sign_up">
        Cadastro
    </string>

    <string name="hint_email_to_login">E-mail (para login)</string>
    <string name="hint_confirm_password">Confirmar senha</string>
    <string name="do_login">Realizar login</string>
    <string name="sign_up">Cadastrar</string>
    <string name="sign_up_going">Cadastrando</string>
    <string name="invalid_sign_up_email">
        E-mail já cadastrado.
    </string>
    <string name="invalid_confirmed_password">
        Confirme a senha informada no campo acima.
    </string>

    <!-- Fixas -->
    <string name="hint_cadastro_cep">CEP</string>
    <string name="quantidadeReunioes">sem reuniões</string>
    <string name="dataDia">sexta-feira, 24</string>
    <string name="meudia">MEU DIA</string>
    <string name="salas">SALAS</string>


    <string name="nome_empresa">Nome empresa</string>
    <string name="perfil">PERFIL</string>
    <string name="empresa">EMPRESA</string>
    <string name="empresa_nome_empresa">Empresa: Nome empresa</string>
    <string name="tema">TEMA</string>
    <string name="todas">TODAS</string>
    <string name="nome_user"> Nome Usuário </string>
    <string name="email_user">user@email.com</string>
    <string name="conta">CONTA</string>
    <string name="usuario">USUÁRIO</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>
    <string name="new_event">Novo Evento</string>

    <string name="reservas">RESERVAS</string>
    <string name="horario">08:00 - 09:00</string>
    <string name="descricao_reuniao">Descricao reuniao</string>
    <string name="calendario">CALENDÁRIO</string>
    <string name="data_atual">sexta-feira, 24</string>
    <string name="todo">TODO</string>
    <string name="descricao">Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum.</string>
    <string name="nome_sala">Nome Sala</string>
    <string name="list_empresas">empresas</string>
    <string name="caracteristicas">Características</string>
    <string name="dimens_sala">Dimensão Sala</string>
    <string name="ar_condicionado">Ar Condicionado</string>
    <string name="capacidade">Capacidade: xx pessoas</string>
    <string name="multimidia">Multimidia</string>
    <string name="reservar">RESERVAR</string>
    <string name="reuniao">REUNIÃO</string>
    <string name="reuniao_evento">Detalhes</string>
    <string name="data">Data</string>
    <string name="text_hour">Horário</string>
    <string name="text_adm_reuniao">Administrador Reunião</string>
    <string name="button_save">SALVAR</string>
    <string name="marcar_reuniao">Marcar Reunião</string>
    <string name="crie_sua_reuniao">Crie Sua Reunião</string>
    <string name="data_reserva">Data da reserva</string>
    <string name="minhas_reservas">MINHAS RESERVAS</string>
    <string name="modo_convidado">Modo convidado</string>

</resources>
