<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="14dp">

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="left"
        android:background="@null"
        android:contentDescription="TODO"
        android:src="@drawable/ic_back_color_primary"
        android:tint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>

    <Button
        android:id="@+id/buttonSave"
        style="@style/ButtonForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:text="@string/button_save"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdmReuniao"></Button>


    <TextView
        android:id="@+id/textReuniao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical"
        android:gravity="left"
        android:text="@string/reuniao"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBack"></TextView>


    <ImageView
        android:id="@+id/risco_desing"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/traco_desing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textReuniao" />

    <TextView
        android:id="@+id/textSala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/salas"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textReuniao"
        app:layout_constraintTop_toBottomOf="@id/risco_desing"></TextView>

    <Spinner
        android:id="@+id/spinnerSalas"
        android:layout_width="match_parent"
        android:imeOptions="actionNext"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSala"></Spinner>

    <TextView
        android:id="@+id/textEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:foregroundGravity="center_vertical"
        android:gravity="left"
        android:text="@string/reuniao_evento"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerSalas"></TextView>


    <ImageView
        android:id="@+id/risco_desing2"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/traco_desing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEvento" />

    <TextView
        android:id="@+id/dataSelecionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/risco_desing2" />

    <TextView
        android:id="@+id/textHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/text_hour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataSelecionada" />

    <TextView
        android:id="@+id/textAdmReuniao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/text_adm_reuniao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHour" />


</androidx.constraintlayout.widget.ConstraintLayout>