<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_login"
    android:orientation="vertical"
    tools:context=".ui.Cadastro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="Cadastro Empresa"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"></TextView>

    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:contentDescription="Icone Usuario"
        android:src="@drawable/ic_empresa_black"
        app:layout_constraintBottom_toTopOf="@+id/ll_container_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"></ImageView>

    <LinearLayout
        android:id="@+id/ll_container_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nome_cadastrar"
            style="@style/EditTextFormField"
            android:autofillHints=""
            android:background="@drawable/bg_form_field_top"
            android:hint="@string/hint_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email_cadastrar"
            style="@style/EditTextFormField"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/bg_form_field_top"
            android:hint="@string/hint_email_to_login"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/cadastrar_cep"
            style="@style/EditTextFormField"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/bg_form_field_top"
            android:hint="@string/hint_cadastro_cep"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/senha_cadastrar"
            style="@style/EditTextFormField"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/bg_form_field_sqr"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/senha_confirmar"
            style="@style/EditTextFormField"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/bg_form_field_bottom"
            android:hint="@string/hint_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonForm"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/shape_button"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            app:layout_constraintRight_toRightOf="@+id/ll_container_fields"
            app:layout_constraintTop_toBottomOf="@+id/ll_container_fields" />

    </LinearLayout>

</LinearLayout>