<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/salas"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewNomeEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nome_empresa"></TextView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Escolha a melhor sala para sua reunião!"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_gravity="center_vertical"
                android:layout_height="1dp"
                android:src="@drawable/traco_desing"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/todas"></TextView>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/traco_desing"></ImageView>
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lista_salas_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        tools:listitem="@layout/list_item_sala" />


</androidx.constraintlayout.widget.ConstraintLayout>